feat: migrate from bd (Go/Dolt) to br (beads_rust/SQLite)
- Install br v0.1.20 (Rust port, SQLite backend, no daemon/hooks)
- Import all 61 issues, 49 dependencies, 3 comments into br
- Update CLAUDE.md: all bd commands → br, new sync workflow
- Simplify AGENTS.md to single line pointing to CLAUDE.md
- Update .gitignore for br (SQLite files, migration artifacts)
- Fix .beads/.gitignore for br runtime files

Fixes the recurring upgrade pain caused by Dolt backend complexity.

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,12 @@
 # bv (beads viewer) local config and caches
 .bv/
 
-# beads local state
-.beads/.bv.lock
-.beads/.jsonl.lock
-.beads/dolt-access.lock
-.beads/dolt/
-.beads/export-state/
+# br (beads_rust) - SQLite database (JSONL is tracked, DB is not)
+.beads/*.db
+.beads/*.db-shm
+.beads/*.db-wal
+.beads/*.lock
 
-# Dolt database files (added by bd init)
-.dolt/
-*.db
+# Migration artifacts
+.beads-go-backup/
+.beads/backup/backup/
