--- a/services/social-service/Dockerfile
+++ b/services/social-service/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /src
 COPY shared/Winzy.Contracts/Winzy.Contracts.csproj shared/Winzy.Contracts/
 COPY shared/Winzy.Common/Winzy.Common.csproj shared/Winzy.Common/
 COPY services/social-service/src/Winzy.SocialService.csproj services/social-service/src/
-COPY Directory.Build.props .
+COPY Directory.Build.props global.json ./
 RUN dotnet restore services/social-service/src/Winzy.SocialService.csproj
 
 COPY shared/ shared/
