--- a/services/activity-service/src/Winzy.ActivityService.csproj
+++ b/services/activity-service/src/Winzy.ActivityService.csproj
@@ -8,7 +8,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.*" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.*" />
-    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.*" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="10.*" />
   </ItemGroup>
 
   <ItemGroup>
