--- a/services/gateway/src/Winzy.Gateway.csproj
+++ b/services/gateway/src/Winzy.Gateway.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
-    <PackageReference Include="Yarp.ReverseProxy" Version="2.*" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="9.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.*" />
+    <PackageReference Include="Yarp.ReverseProxy" Version="2.*" />
   </ItemGroup>
 
   <ItemGroup>
