--- a/services/gateway/src/appsettings.json
+++ b/services/gateway/src/appsettings.json
@@ -12,43 +12,80 @@
       }
     }
   },
+  "Jwt": {
+    "Secret": "CHANGE-THIS-IN-PRODUCTION-minimum-32-characters-long"
+  },
+  "Cors": {
+    "Origins": ["http://localhost:8081"]
+  },
   "ReverseProxy": {
     "Routes": {
+      "auth-public-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth/{action}",
+          "Methods": ["POST"]
+        },
+        "RateLimiterPolicy": "auth",
+        "Order": 1
+      },
       "auth-route": {
         "ClusterId": "auth-cluster",
         "Match": {
           "Path": "/auth/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "auth",
+        "Order": 2
+      },
+      "habits-public-route": {
+        "ClusterId": "habit-cluster",
+        "Match": {
+          "Path": "/habits/public/{**catch-all}"
+        },
+        "RateLimiterPolicy": "default",
+        "Order": 1
       },
       "habits-route": {
         "ClusterId": "habit-cluster",
         "Match": {
           "Path": "/habits/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default",
+        "Order": 2
       },
       "social-route": {
         "ClusterId": "social-cluster",
         "Match": {
           "Path": "/social/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
       },
       "challenges-route": {
         "ClusterId": "challenge-cluster",
         "Match": {
           "Path": "/challenges/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
       },
       "notifications-route": {
         "ClusterId": "notification-cluster",
         "Match": {
           "Path": "/notifications/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
       },
       "activity-route": {
         "ClusterId": "activity-cluster",
         "Match": {
           "Path": "/activity/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
       }
     },
     "Clusters": {
