fix: per-IP rate limiting, explicit auth routes, remove unrelated files
- Rate limiter policies now partition by client IP address instead of
  static keys, preventing all clients from sharing the same bucket
- Replace broad auth-public-route (/auth/{action}) with explicit routes
  for /auth/register, /auth/login, and /auth/refresh only
- Revert CLAUDE.md to main and remove docker-compose files that don't
  belong in this PR

--- a/services/gateway/src/appsettings.json
+++ b/services/gateway/src/appsettings.json
@@ -16,19 +16,12 @@
     "Secret": "CHANGE-THIS-IN-PRODUCTION-minimum-32-characters-long"
   },
   "Cors": {
-    "Origins": ["http://localhost:8081"]
+    "Origins": [
+      "http://localhost:8081"
+    ]
   },
   "ReverseProxy": {
     "Routes": {
-      "auth-public-route": {
-        "ClusterId": "auth-cluster",
-        "Match": {
-          "Path": "/auth/{action}",
-          "Methods": ["POST"]
-        },
-        "RateLimiterPolicy": "auth",
-        "Order": 1
-      },
       "auth-route": {
         "ClusterId": "auth-cluster",
         "Match": {
@@ -86,6 +79,39 @@
         },
         "AuthorizationPolicy": "authenticated",
         "RateLimiterPolicy": "default"
+      },
+      "auth-register-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth/register",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "RateLimiterPolicy": "auth",
+        "Order": 1
+      },
+      "auth-login-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth/login",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "RateLimiterPolicy": "auth",
+        "Order": 1
+      },
+      "auth-refresh-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth/refresh",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "RateLimiterPolicy": "auth",
+        "Order": 1
       }
     },
     "Clusters": {
