feat: API Gateway (YARP) (#93)
* feat: add Docker Compose for local development (winzy.ai-byn)

- 7 application services (gateway + 6 backend) with health-check-aware depends_on
- 6 PostgreSQL databases with named volumes and pg_isready health checks
- NATS with JetStream enabled for at-least-once delivery
- Shared bridge network for service discovery
- Override file with Development environment for all services

Closes winzy.ai-byn

* feat: implement API Gateway with JWT, rate limiting, CORS (winzy.ai-a5o)

- JWT Bearer authentication with configurable secret
- X-User-Id header injection middleware (strips incoming to prevent spoofing)
- Internal route blocking middleware (/habits/user/*, /internal/*)
- Fixed-window rate limiting (100/min default, 10/min for auth endpoints)
- CORS with configurable origins
- Health check aggregation for all downstream services
- YARP routes with per-route authorization and rate limiting policies
- Public routes: /auth/{register,login,refresh} (POST), /habits/public/*

* fix(beads): correct timestamps where updated_at < created_at

Issues winzy.ai-h8q, winzy.ai-p5r, winzy.ai-q7t had updated_at
timestamps ~30 min before their created_at, causing br sync to fail.

* fix: per-IP rate limiting, explicit auth routes, remove unrelated files

- Rate limiter policies now partition by client IP address instead of
  static keys, preventing all clients from sharing the same bucket
- Replace broad auth-public-route (/auth/{action}) with explicit routes
  for /auth/register, /auth/login, and /auth/refresh only
- Revert CLAUDE.md to main and remove docker-compose files that don't
  belong in this PR

--- a/services/gateway/src/appsettings.json
+++ b/services/gateway/src/appsettings.json
@@ -12,43 +12,106 @@
       }
     }
   },
+  "Jwt": {
+    "Secret": "CHANGE-THIS-IN-PRODUCTION-minimum-32-characters-long"
+  },
+  "Cors": {
+    "Origins": [
+      "http://localhost:8081"
+    ]
+  },
   "ReverseProxy": {
     "Routes": {
       "auth-route": {
         "ClusterId": "auth-cluster",
         "Match": {
           "Path": "/auth/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "auth",
+        "Order": 2
+      },
+      "habits-public-route": {
+        "ClusterId": "habit-cluster",
+        "Match": {
+          "Path": "/habits/public/{**catch-all}"
+        },
+        "RateLimiterPolicy": "default",
+        "Order": 1
       },
       "habits-route": {
         "ClusterId": "habit-cluster",
         "Match": {
           "Path": "/habits/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default",
+        "Order": 2
       },
       "social-route": {
         "ClusterId": "social-cluster",
         "Match": {
           "Path": "/social/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
       },
       "challenges-route": {
         "ClusterId": "challenge-cluster",
         "Match": {
           "Path": "/challenges/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
       },
       "notifications-route": {
         "ClusterId": "notification-cluster",
         "Match": {
           "Path": "/notifications/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
       },
       "activity-route": {
         "ClusterId": "activity-cluster",
         "Match": {
           "Path": "/activity/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "authenticated",
+        "RateLimiterPolicy": "default"
+      },
+      "auth-register-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth/register",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "RateLimiterPolicy": "auth",
+        "Order": 1
+      },
+      "auth-login-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth/login",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "RateLimiterPolicy": "auth",
+        "Order": 1
+      },
+      "auth-refresh-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth/refresh",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "RateLimiterPolicy": "auth",
+        "Order": 1
       }
     },
     "Clusters": {
