--- a/services/gateway/src/appsettings.json
+++ b/services/gateway/src/appsettings.json
@@ -36,7 +36,7 @@
         "Match": {
           "Path": "/habits/public/{**catch-all}"
         },
-        "RateLimiterPolicy": "default",
+        "RateLimiterPolicy": "standard",
         "Order": 1
       },
       "habits-route": {
@@ -45,7 +45,7 @@
           "Path": "/habits/{**catch-all}"
         },
         "AuthorizationPolicy": "authenticated",
-        "RateLimiterPolicy": "default",
+        "RateLimiterPolicy": "standard",
         "Order": 2
       },
       "social-route": {
@@ -54,7 +54,7 @@
           "Path": "/social/{**catch-all}"
         },
         "AuthorizationPolicy": "authenticated",
-        "RateLimiterPolicy": "default"
+        "RateLimiterPolicy": "standard"
       },
       "challenges-route": {
         "ClusterId": "challenge-cluster",
@@ -62,7 +62,7 @@
           "Path": "/challenges/{**catch-all}"
         },
         "AuthorizationPolicy": "authenticated",
-        "RateLimiterPolicy": "default"
+        "RateLimiterPolicy": "standard"
       },
       "notifications-route": {
         "ClusterId": "notification-cluster",
@@ -70,7 +70,7 @@
           "Path": "/notifications/{**catch-all}"
         },
         "AuthorizationPolicy": "authenticated",
-        "RateLimiterPolicy": "default"
+        "RateLimiterPolicy": "standard"
       },
       "activity-route": {
         "ClusterId": "activity-cluster",
@@ -78,7 +78,7 @@
           "Path": "/activity/{**catch-all}"
         },
         "AuthorizationPolicy": "authenticated",
-        "RateLimiterPolicy": "default"
+        "RateLimiterPolicy": "standard"
       },
       "auth-register-route": {
         "ClusterId": "auth-cluster",
