fix: JWT secret env var, global.json rollForward, forwarded headers, remove unused Common ref (winzy.ai-2uc, winzy.ai-24n, winzy.ai-29u, winzy.ai-3af)
- Add Jwt__Secret env var to gateway in docker-compose.yml
- Change global.json rollForward from latestPatch to latestMinor
- Add UseForwardedHeaders() before rate limiter for correct IP behind proxy
- Remove Winzy.Common ProjectReference from gateway (unused NATS dependency)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -147,6 +147,7 @@ services:
       - "5050:5000"
     environment:
       ASPNETCORE_URLS: http://+:5000
+      Jwt__Secret: winzy-dev-jwt-secret-minimum-32-characters-long!!
       ReverseProxy__Clusters__auth-cluster__Destinations__destination1__Address: http://auth-service:5001
       ReverseProxy__Clusters__habit-cluster__Destinations__destination1__Address: http://habit-service:5002
       ReverseProxy__Clusters__social-cluster__Destinations__destination1__Address: http://social-service:5003
